Fix in Upload page the abnormal display of news content input placeholder

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -32,9 +32,8 @@
 
             <div class="mb-3"> {# Use Bootstrap's margin bottom class for spacing #}
               {{ form.news_content.label(class="form-label") }} {# Add 'form-label' class #}
-              {{ form.news_content(class="form-control form-control-lg", id="news_content",rows="10", placeholder="Paste
-              or type news
-              content here...") }} {# Add 'form-control-lg', increase rows, add placeholder #}
+              {{ form.news_content(class="form-control form-control-lg", id="news_content",rows="10", 
+              placeholder="Paste or type news content here...") }} {# Add 'form-control-lg', increase rows, add placeholder #}
 
               <!--Word count function-->
               <div class="text-white mt-2">
